data/all_generated_tests/raw_wast_tests/if_StackCorruption_1421.wast
;; 2. **Test Name: Block Type Incongruence**    - **Description**: Set up `if` blocks with mismatched `blocktype` output expectations between `then` and `else` sections, particularly focusing on a misaligned stack after execution to induce a validation trap specifically due to inconsistent stack states.      ```wasm      (i32.const 1) (if (result i32) (i32.add) else (i32.add (i32.const 1)) end)      ```    - **Reasoning**: Checks how each implementation verifies resultant stack conformity post `if` block execution.

(assert_invalid
  (module
    (func
      (i32.const 1)
      (if (result i32)
        (then (i32.add))
        (else (i32.add (i32.const 1)))
      )
    )
  )
  "type mismatch"
)